<resources>
    <string name="app_name">Quintal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_user_area">UserAreaActivity</string>
    <string name="login_text_title">Login</string>
    <string name="welcome_text">Welcome, please specify your role</string>
    <string name="buton_login_student">Student</string>
    <string name="button_login_teacher">Teacher</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_logout">Log out</string>

    <!--String related to homepage-->
    <string name="nav_home">Home</string>
    <string name="nav_gradebook">Gradebook</string>
    <string name="nav_attendance">Attendance</string>
    <string name="nav_timetable">Timetable</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_announcement">Announcement</string>
    <string name="nav_menu2">Subjects</string>

    <!--String related to Home Fragment-->
    <string name="bUpcoming_test">Upcoming Test</string>
    <string name="bAssignment_due">Assignment Due</string>
    <string name="bUnread_material">Unread Materials</string>
    <string name="tUpcoming_event">Upcoming Events</string>
    <string name="tAnnouncement">Announcements</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash_screen">SplashScreen</string>

    <!--String related to Login Activity-->
    <string name="loading">Authenthicating...</string>
    <string name="login_failed">Login failed</string>
    <string name="tForgot_password">Forgot your password ?</string>
    <string name="tForgot_password_msg">Type your email below to reset your password</string>
    <string name="hint_email">email address</string>
    <string name="bReset_password">Reset password</string>
    <string name="bForgot_password">Forgot your password?</string>
    <string name="email_required">Email is required?</string>
    <string name="authentication">Authenticating...</string>
    <string name="base_url">http://192.168.0.119:8000/en/</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="password_required">password is required</string>

</resources>
