<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

    <RelativeLayout
        android:id="@+id/activity_user_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.quintal_dev_3.myfirstapp.UserAreaActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tWelcome"
            android:text="@string/welcome_text"
            android:textColor="@android:color/background_dark"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_marginTop="22dp" />

        <Button
            android:text="@string/buton_login_student"
            android:id="@+id/bStudent"
            android:layout_width="1000dp"
            android:layout_height="175dp"
            android:background="@drawable/button_rounded"
            android:textColor="@android:color/background_light"
            android:layout_below="@+id/tWelcome"
            android:layout_marginTop="26dp"
            android:onClick="onButtonStudentClicked"/>

        <Button
            android:text="@string/button_login_teacher"
            android:id="@+id/bTeacher"
            android:layout_width="1000dp"
            android:layout_height="175dp"
            android:background="@drawable/button_rounded"
            android:textColor="@android:color/background_light"
            style="@style/Widget.AppCompat.Button"
            android:layout_below="@+id/bStudent"
            android:layout_marginTop="14dp"
            android:onClick="onButtonTeacherClicked"/>

    </RelativeLayout>
</LinearLayout>