<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.quintal_dev_3.quintal.fragment.HomeFragment"
    android:weightSum="1"
    android:elevation="4dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:text="@string/bUpcoming_test"
            android:background="@drawable/button_rounded"
            android:layout_height="70dp"
            android:id="@+id/b_Upcoming_test"
            android:contentDescription="Upcoming Test"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFF"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:hapticFeedbackEnabled="false"
            android:gravity="center_horizontal"
            android:backgroundTint="@android:color/holo_red_light"
            android:layout_marginTop="10dp"
            android:layout_marginRight="4dp"
            android:elevation="4dp" />

        <Button
            android:text="@string/bAssignment_due"
            android:background="@drawable/button_rounded"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/bAssigmnet_due"
            android:contentDescription="Assignment Due"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFF"
            android:gravity="center_horizontal"
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_marginTop="10dp"
            android:elevation="4dp" />

        <Button
            android:text="@string/bUnread_material"
            android:background="@drawable/button_rounded"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/bUnread_materials"
            android:contentDescription="Unread Materials"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFF"
            android:gravity="center_horizontal"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_marginTop="10dp"
            android:elevation="4dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rvEvent_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tUpcoming_event"
                    android:text="@string/tUpcoming_event"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvEvent"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:elevation="0dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rvAnnouncement_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/layout_border">

                <TextView
                    android:text="@string/tAnnouncement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tAnnouncement"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvAnnouncement"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
